client filter on task list page
