# aua-app/src/_assets/api.yml
@@ -222,6 +222,14 @@ paths:
       responses:
         200:
           description: OK
+  /user/client:
+    get:
+      operationId: listClients
+      # security:
+      #   - authAdminOrAgent: []
+      responses:
+        200:
+          description: OK
   /user/agent:
     get:
       operationId: listAgents
